Comments section in /reviewlog is missing background color (bug 648099)

--- a/media/css/zamboni/editors.css
+++ b/media/css/zamboni/editors.css
@@ -295,7 +295,8 @@ ul.tabnav a:hover {
     padding: 15px;
 }
 
-tr.comments {
+table.data-grid tr.comments td {
+    border-top: none;
     background: #def;
 }
 
